JavaScript is working

--- a/Type game/index.html
+++ b/Type game/index.html
@@ -8,7 +8,8 @@
     <title>Type Game</title>
 </head>
 <body>
-    <div class="wraper">
+    <div class="wrapper">
+        <input type="text" class="input-field">
         <div class="content-box">
             <div class="typing-text">
                 <p></p>
@@ -16,7 +17,7 @@
             <div class="content">
                 <ul class="result-details">
                     <li class="time">
-                        <p>Time Left:</p>
+                        <p>Time Left:</p>   
                         <span><b>60</b>s</span>
                     </li>
                     <li class="mistakes">
